environments/prod/backend/networkpolicy-backend-baseline.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dir-backend-baseline
  namespace: dir-backend-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - ipBlock:
        cidr: 169.254.25.10/32
    - ipBlock:
        cidr: 172.20.0.10/32
  - ports:
    - port: 4317
      protocol: TCP
    - port: 4318
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dir-obsv-ns
  ingress:
  - from:
    - ipBlock:
        cidr: 169.254.7.127/32
